--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -215,33 +215,31 @@
 
     /* Button.tsx */
     .Button {
-        @apply rounded-md font-bold transition-colors duration-300
-        flex items-center justify-center;
+        @apply rounded-md font-bold transition-colors
+        flex items-center justify-center outline-none focus:ring-2;
     }
 
     .Button.ButtonPrimary {
         @apply bg-primary-500 text-primary-contrast
         hover:bg-primary-600 active:bg-primary-700
-        dark:text-primary-contrast
-        outline-primary-800 ring-primary-300;
+        dark:text-primary-contrast ring-primary-400;
     }
 
     .Button.ButtonDanger {
-        @apply bg-red-400 hover:bg-red-500 active:bg-red-600 text-white ring-red-300;
+        @apply bg-red-400 dark:hover:bg-red-500/10 dark:active:bg-red-500/20
+            hover:bg-red-500 active:bg-red-600 text-white ring-red-300;
     }
 
     .Button.ButtonSecondary {
-        @apply bg-gray-100 dark:bg-black-300 active:bg-gray-200
-        dark:outline-black-100
-        outline-gray-50 hover:bg-gray-200
-        dark:hover:bg-black-200 dark:active:bg-black-400;
+        @apply bg-gray-100 dark:bg-black-300 active:bg-gray-200 ring-gray-200 dark:ring-black-200
+        hover:bg-gray-200 dark:hover:bg-black-200 dark:active:bg-black-400;
     }
 
     .Button.ButtonTransparent {
         @apply hover:bg-gray-50 dark:hover:bg-black-300
-        dark:active:bg-black-400
+        dark:active:bg-black-400 ring-primary-50 dark:ring-black-400
         text-gray-800 dark:text-gray-300
-        dark:outline-black-300 outline-gray-50;
+        dark:outline-black-300;
     }
 
     .Button.GradientButton {
@@ -278,7 +276,7 @@
     }
 
     .Button.ButtonDangerFlat {
-        @apply bg-transparent text-red-500 hover:bg-primary-50;
+        @apply bg-transparent text-red-500 hover:bg-red-50 active:bg-red-100;
     }
 
     .Button[disabled],
@@ -521,8 +519,8 @@
         @apply border-gray-200 bg-gray-100 dark:border-black-300
         hover:bg-gray-200 active:bg-gray-300 hover:border-gray-300
         dark:hover:border-black-300 dark:bg-black-300
-        dark:hover:bg-black-400 dark:active:bg-black-500
-        dark:outline-black-300 transition-all duration-300 relative
+        dark:hover:bg-black-300/80 dark:active:bg-black-400
+        dark:outline-black-300 transition-all relative
         text-gray-600 dark:text-gray-200;
     }
 
